Update making of the model.ipynb

--- a/making of the model.ipynb
+++ b/making of the model.ipynb
@@ -202,8 +202,7 @@
     "    train_dataset=train_dataset,\n",
     ")\n",
     "\n",
-    "trainer.train()\n",
-    "print(\"Gemma model training completed.\")"
+    "trainer.train()"
    ]
   },
   {
