Update making of the model.ipynb

--- a/making of the model.ipynb
+++ b/making of the model.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2008,6 +2008,7 @@
     "import pandas as pd\n",
     "import re\n",
     "from transformers import pipeline\n",
+    "import  json\n",
     "\n",
     "def load_test_data(csv_path):\n",
     "    try:\n",
@@ -2054,27 +2055,25 @@
     "        model_name = \"local_model\"  # Path to your trained model\n",
     "        test_prompts = df[column_name].tolist()\n",
     "        generated_texts = generate_text(model_name, test_prompts)\n",
-    "        \n",
-    "        # Print or save generated texts\n",
+    "        a = {}\n",
     "        for prompt, generated_text in zip(test_prompts, generated_texts):\n",
+    "            a[prompt] = generated_text\n",
     "            print(f\"Prompt: {prompt}\")\n",
     "            print(f\"Generated Text: {generated_text}\\n\")\n",
+    "        with open('data.json', 'w') as file:\n",
+    "            json.dump(a, file, indent=4)\n",
     "    else:\n",
     "        print(\"Preprocessing failed. Please check column names.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "a = {}\n",
-    "for prompt, generated_text in zip(test_prompts, generated_texts):\n",
-    "            a[prompt] = generated_text\n",
-    "with open('data.json', 'w') as file:\n",
-    "    json.dump(a, file, indent=4)\n"
+    "\n"
    ]
   }
  ],
